--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ $(document).ready(function () {
 
 <div id="i-have-a-webpage" class="section level3">
 <h3>I have a webpage!</h3>
-<p>Introduction of myself</p>
+<p>Introduction of myself: typing….</p>
 </div>
 <div id="have-a-link" class="section level3">
 <h3>have a link</h3>
