add about pages and linkedin account

--- a/about.html
+++ b/about.html
@@ -194,6 +194,12 @@ $(document).ready(function () {
      
   </a>
 </li>
+<li>
+  <a href="https://www.linkedin.com/in/yuqi-tu-097791104/">
+    <span class="fa fa-linkedin fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -208,10 +214,112 @@ $(document).ready(function () {
 </div>
 
 
-<div id="about-this-site" class="section level3">
-<h3>About this site</h3>
-<p>Sometimes you need to say a bit about the site – how it was made, where it’s hosted, where the source code can be found.</p>
-<p>If this is for a project or analysis, I recommend giving some details about the R package versions that you used to create the content.</p>
+<p><br></p>
+<div id="education" class="section level3">
+<h3>EDUCATION</h3>
+<hr />
+<div id="columbia-university-mailman-school-of-public-health-new-york-ny-expected-may-2019" class="section level5">
+<h5>Columbia University | Mailman School of Public Health | New York, NY | Expected May 2019</h5>
+<ul>
+<li><em>Master of Science in Biostatistics, concentrated in Theory and Method</em>
+<ul>
+<li>Relevant Coursework:data science, probability, statistical inference, and survival analysis.</li>
+</ul></li>
+</ul>
+</div>
+<div id="university-of-california-irvine-irvine-ca-june-2017" class="section level5">
+<h5>University of California, Irvine | Irvine, CA | June 2017</h5>
+<ul>
+<li><em>Bachelor of Science in Biological Sciences</em></li>
+<li><em>Honors:</em> Dean’s Honor List: 5 Quarters, Golden Key Honor Society, Phi Sigma Pi Honor Fraternity
+<ul>
+<li>Relevant Coursework: Genetics, Biochemistry, Applied Human Anatomy, Human Physiology, Human Nutrition</li>
+</ul></li>
+</ul>
+<p><br></p>
+</div>
+</div>
+<div id="professional-experience" class="section level3">
+<h3>PROFESSIONAL EXPERIENCE</h3>
+<hr />
+<div id="project-assistant-intern-icarbonx-shenzhen-guangdong-china-june-2017---august-2017" class="section level5">
+<h5>Project Assistant Intern | iCarbonX | Shenzhen, Guangdong, China | June 2017 - August 2017</h5>
+<ul>
+<li>Collaborated with a Project Manager and Algorithm Engineers to collect and organize imaging data using Excel.</li>
+<li>Created and managed an annotation system for 12,000+ imaging data and the measurement data from 3D camera to train our image recognition system.</li>
+</ul>
+</div>
+<div id="research-assistant-dept.-of-pharmacology-school-of-medicine-university-of-california-irvine-irvine-ca-september-2014---june-2017" class="section level5">
+<h5>Research Assistant | Dept. of Pharmacology, School of Medicine, University of California, Irvine | Irvine, CA | September 2014 - June 2017</h5>
+<ul>
+<li>Assisted to perform genetic and animal experiments in Neuropharmacology in the melanin-concentrating hormone (MCH) system mediating oxytocin (OT) on autism spectrum disorders (ASD). Worked collaboratively in a team of 14 researchers.</li>
+<li>Independently performed data analysis using Excel for animal behavior tests and imaging data from neuron activity examination. Followed procedures to perform mice dissection, DNA collections, and brain imaging.</li>
+</ul>
+</div>
+<div id="peer-health-educator-student-wellness-health-promotion-university-of-california-irvine-irvine-ca-april-2016---june-2017" class="section level5">
+<h5>Peer Health Educator | Student Wellness &amp; Health Promotion, University of California, Irvine | Irvine, CA | April 2016 - June 2017</h5>
+<ul>
+<li>Promoted healthy behaviors and lifestyles by giving speech on campus, facilitating interactive workshops, social marketing, and public outreach. Increased 70% more participants in Wellness workshops.</li>
+<li>Advised students on various topics of wellness, alcohol and drug use, and sexual health and relationships.</li>
+</ul>
+</div>
+<div id="urop-fellow-with-research-funding-the-undergraduate-research-opportunities-program-urop-university-of-california-irvine-ca-august-2015---june-2016" class="section level5">
+<h5>UROP Fellow with Research Funding | The Undergraduate Research Opportunities Program (UROP) | University of California, Irvine, CA | August 2015 - June 2016</h5>
+<ul>
+<li>Awarded research grant from the Undergraduate Research Opportunities Program.</li>
+<li>Conducted a research program in Neuropharmacology in the melanin-concentrating hormone (MCH) neuron ablation which affects repetitive behaviors on Obsessive-Compulsive Disorder (OCD) and Autism.</li>
+<li>Managed the project schedule, wrote a proposal for fundings, led experiments, perform data analysis for 50+ groups of mice data using Excel, and presented poster at the UROP symposium.</li>
+</ul>
+</div>
+<div id="international-peer-advisor-the-francisco-j.-ayala-school-of-biological-sciences-university-of-california-irvine-irvine-ca-march-2015---june-2017" class="section level5">
+<h5>International Peer Advisor | The Francisco J. Ayala School of Biological Sciences, University of California, Irvine| Irvine, CA | March 2015 - June 2017</h5>
+<ul>
+<li>Conducted interactive networking programs for 250+ international students to communicate with professional faculty and staff to strengthen the connection between international students and the school.</li>
+<li>Advised students on scheduling classes, getting involved on campus, planning graduate school and future careers.</li>
+</ul>
+<p><br></p>
+</div>
+</div>
+<div id="selected-leadership-experience-and-community-involvement" class="section level3">
+<h3>SELECTED LEADERSHIP EXPERIENCE AND COMMUNITY INVOLVEMENT</h3>
+<hr />
+<div id="co-founder-and-research-director-kids-in-nutrition-at-uci-kin-university-of-california-irvine-ca-november-2016---june-2017" class="section level5">
+<h5>Co-Founder and Research Director | Kids in Nutrition at UCI (KIN) | University of California, Irvine, CA | November 2016 - June 2017</h5>
+<ul>
+<li>Connected college and elementary school students to empower a healthy and active lifestyle.</li>
+<li>Designed research model for improving class performance and collaborate with other chapters to develop a biological research project related to nutrition and education.</li>
+<li>Recruited new elementary schools and UC Irvine students to join the program and presented instructor training to new members.</li>
+</ul>
+</div>
+<div id="volunteer-emergency-department-uc-irvine-medical-center-orange-ca-june-2015---june-2016" class="section level5">
+<h5>Volunteer | Emergency Department, UC Irvine Medical Center | Orange, CA |June 2015 - June 2016</h5>
+<ul>
+<li>Assisted physicians and nurses by checking in 30+ patients daily, communicating with other departments in the hospital, providing medical supplies, and transferring patients to different departments.</li>
+</ul>
+<p><br></p>
+</div>
+</div>
+<div id="skills" class="section level3">
+<h3>Skills</h3>
+<hr />
+<div id="software" class="section level5">
+<h5>Software</h5>
+<ul>
+<li>R programming</li>
+<li>SAS</li>
+<li>ImaingJ</li>
+<li>Adobe Photoshop</li>
+<li>Python (basic)</li>
+<li>Microsoft Word, Excel, and PowerPoint</li>
+</ul>
+</div>
+<div id="languages" class="section level5">
+<h5>Languages</h5>
+<ul>
+<li>Chinese</li>
+<li>English</li>
+</ul>
+</div>
 </div>
 
 
