--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@ $(document).ready(function () {
      
   </a>
 </li>
+<li>
+  <a href="https://www.linkedin.com/in/yuqi-tu-097791104/">
+    <span class="fa fa-linkedin fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -208,21 +214,9 @@ $(document).ready(function () {
 </div>
 
 
-<div id="i-have-a-webpage" class="section level3">
-<h3>I have a webpage!</h3>
-<p>Introduction of myself: typing….please write</p>
-<p>and add some link here</p>
-</div>
-<div id="have-a-link" class="section level3">
-<h3>have a link</h3>
-<p>here is my <a href="https://www.google.com">resume</a></p>
-<p>here is my <a href="about.html">about</a></p>
-</div>
-<div id="add-picture" class="section level3">
-<h3>add picture</h3>
-<p>here is my picture: ## can be put into a code chunk??</p>
+<p>Welcome to my website!</p>
+<p>Do you want to know more about <a href="about.html">me</a></p>
 <p><img src="images/uci_grad_photo.JPG" style="width:70%"></p>
-</div>
 
 
 
