add introduction 1 to the home page

--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">About Me</a>
 </li>
 <li>
   <a href="mailto:&lt;yt2604@cumc.columbia.edu&gt;">
