--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">About Me</a>
 </li>
 <li>
   <a href="mailto:&lt;yt2604@cumc.columbia.edu&gt;">
@@ -214,9 +214,17 @@ $(document).ready(function () {
 </div>
 
 
-<p>Welcome to my website!</p>
-<p>Do you want to know more about <a href="about.html">me</a></p>
+<div id="welcome-to-my-website" class="section level2">
+<h2>Welcome to my website!</h2>
+<div id="who" class="section level5">
+<h5>WHO?</h5>
+<ul>
+<li>I am a biostatistics-learner passionate about the crossover of health, statistics, techology. Currently, I am a master student majoring Biostatistics at Columbia Univeristy. After two-year study, I will be able to analyze medical data and collaborate with various professionals to improve human health.</li>
+</ul>
+<p>Do you want to know more about <a href="about.html">me</a>?</p>
 <p><img src="images/uci_grad_photo.JPG" style="width:70%"></p>
+</div>
+</div>
 
 
 
